- Added "Earned Pins" or "Pins". These are something that users can earn that stays with them forever, they can either be for good, or for worse...
- Added Schlog+ News. Now when browsing the schlog, you will be greeted to a news headline.