@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "Schlog+",
-  "version": "1.6",
+  "version": "1.6.1",
 
   "description": "Schlog / Shlog enhancement project by Soygoy / s. ",
   "homepage_url": "https://s5s5s5.com",
